tela prontas> buscar meu cep e ADM

--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -1,25 +1,44 @@
 <section id="main_admin">
+        <h2>ÁREA DO ADMISTRADOR</h2>
     <div class="conteiner_admin d-flex">
         <a class="conteiner_link">
-            <p>Gerenciar Usuaários</p>
-            <i class="bi bi-person-circle"></i>
+
+
+            <p>Produtos</p>
+
+            <div class="logo">
+                <i class="bi bi-person-circle"></i>
+            </div>
+
         </a>
         <a class="conteiner_link">
-            <p>Gerenciar Usuaários</p>
-            <i class="bi bi-person-circle"></i>
+            <p>Clientes </p>
+            <div class="logo">
+                <i class="bi bi-person-circle"></i>
+            </div>
         </a>
         <a class="conteiner_link">
-            <p>Gerenciar Usuaários</p>
-            <i class="bi bi-person-circle"></i>
+            <p>Adicionar Produtos</p>
+            <div class="logo">
+                <i class="bi bi-person-circle"></i>
+            </div>
         </a>
+
         <a class="conteiner_link">
-            <p>Gerenciar Usuaários</p>
-            <i class="bi bi-person-circle"></i>
+            <p>Remover Produtos</p>
+            <div class="logo">
+                <i class="bi bi-person-circle"></i>
+            </div>
         </a>
+
         <a class="conteiner_link">
-            <p>Gerenciar Usuaários</p>
-            <i class="bi bi-person-circle"></i>
+            <p>Peditos</p>
+            <div class="logo">
+                <i class="bi bi-person-circle"></i>
+            </div>
         </a>
+
+
 
     </div>
 </section>
