--- a/css/style.css
+++ b/css/style.css
@@ -458,10 +458,6 @@ footer {
         background-color: white;
         border-radius: 20px
     }
-
-    ;
-
-
 }
 
 #conteiner_carrosel {
@@ -1241,10 +1237,10 @@ footer {
 
                 .modal {
                     padding-top: 30px;
-                    backdrop-filter: blur(2px);
+                    backdrop-filter: blur(5px) !important;
 
                     .modal-content {
-                        background-color: rgba(0, 0, 0, 0.205);
+                        background-color: rgba(0, 0, 0, 0.405);
                         border-radius: 20px !important;
                         border: solid 1px white;
 
@@ -1261,6 +1257,61 @@ footer {
                             }
                         }
                     }
+
+                    .modal-body {
+                        form {
+                            padding: 26px 10px;
+
+                            input {
+                                width: 100%;
+                                height: 50px;
+                                border-radius: 50px;
+                                border: solid 1px white;
+                                background-color: transparent !important;
+                                background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+
+                                padding: 0 15px;
+                                margin-bottom: 20px;
+
+                                color: white;
+                                font-weight: 600;
+
+                            }
+
+                            input::placeholder {
+                                color: white;
+                                opacity: 70%;
+                                font-size: 16px;
+                                font-weight: normal !important;
+                            }
+
+                            span {
+                                n {
+                                    font-weight: bold;
+                                }
+
+                                margin-left: 20px;
+                            }
+
+                            .btn {
+                                display: flex;
+                                justify-content: end;
+
+                                button {
+                                    width: 110px;
+                                    height: 40px;
+
+                                    text-align: center;
+
+                                    font-size: 20px;
+                                    font-weight: bold;
+
+                                    border: none;
+                                    border-radius: 50px;
+                                }
+                            }
+                        }
+                    }
                 }
             }
 
@@ -1270,9 +1321,7 @@ footer {
                     font-weight: bold;
                 }
             }
-
         }
-
     }
 
     .descricao_completa2 {
@@ -1334,43 +1383,62 @@ footer {
 
 #main_admin {
     width: 100%;
-    margin: 30px auto;
+    margin: 40px auto;
+
+
+
+    h2 {
+        text-align: center;
+        font-size: 26px !important;
+        font-weight: bold;
+        margin-bottom: 30px;
+    }
 
     .conteiner_admin {
         width: 100%;
         justify-content: space-between;
         flex-wrap: wrap;
-
-        padding: 10px;
+        padding: 15px;
 
 
         .conteiner_link {
             width: 48%;
-            margin-bottom: 20px;
             background-color: rgba(197, 197, 197, 0.1);
             padding: 20px;
 
             border: solid 1px white;
             border-radius: 20px;
 
+            margin-bottom: 20px;
             text-align: center;
             text-decoration: none;
 
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+
+
+
             p {
+
                 color: white;
                 font-size: 20px;
                 font-weight: bold;
+                margin: 0 !important;
             }
+
 
             i {
-                font-size: 48px;
+                font-size: 44px;
                 color: white;
             }
-
         }
 
     }
+
 }
+
 
 @media (min-width: 600px) {
     #conteiner_carrosel {
@@ -1538,8 +1606,37 @@ footer {
         }
     }
 
+    #main_admin {
+        margin: 60px auto;
+
+        .conteiner_admin {
+            justify-content: center !important;
+            gap: 20px !important;
+
+            .conteiner_link {
+                width: 190px !important;
+                height: 160px;
+                margin-bottom: 20px;
+                background-color: rgba(197, 197, 197, 0.1);
+                padding: 20px;
 
 
+
+                p {
+                    color: white;
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+
+                i {
+                    font-size: 48px;
+                    color: white;
+                }
+
+            }
+
+        }
+    }
 }
 
 @media (min-width: 640px) {
@@ -1599,6 +1696,11 @@ footer {
 
             }
         }
+    }
+
+
+    #main_admin {
+        margin: 80px auto;
     }
 }
 
