--- a/paginas/detalheProduto.phtml
+++ b/paginas/detalheProduto.phtml
@@ -58,6 +58,17 @@
                             </div>
                             <div class="modal-body">
 
+                                <form action="">
+                                    <input type="text" placeholder="Estado">
+                                    <input type="text" placeholder="Cidade">
+                                    
+                                    <span><n>Seu CEP:</n> 87355-000</span>   
+                                
+                                    <div class="btn">
+                                        <button>Buscar</button>
+                                    </div>
+                                </form>
+
                             </div>
                         </div>
                     </div>
@@ -71,6 +82,7 @@
         </div>
 
     </div>
+
     <div class="descricao_completa2">
         <H2>Descricão </H2>
         <p>iPhone 16 Pro Max. Com estrutura em titânio, Controle da Câmera, 4K Dolby Vision a 120 qps e o chip A18 Pro. Avisos legais *As telas têm bordas arredondadas. Quando medida como um retângulo, a tela tem 6,12 polegadas (iPhone 16), 6,69 polegadas (iPhone 16 Plus), 6,27 polegadas (iPhone 16 Pro) ou 6,86 polegadas (iPhone 16 Pro Max) na diagonal. A área real de visualização é menor.</p>
@@ -259,4 +271,3 @@
 
 
 </section>
-
