criação de pagina de mais vendidos[

--- a/paginas/detalheProduto.phtml
+++ b/paginas/detalheProduto.phtml
@@ -61,9 +61,11 @@
                                 <form action="">
                                     <input type="text" placeholder="Estado">
                                     <input type="text" placeholder="Cidade">
-                                    
-                                    <span><n>Seu CEP:</n> 87355-000</span>   
-                                
+
+                                    <span>
+                                        <n>Seu CEP:</n> 87355-000
+                                    </span>
+
                                     <div class="btn">
                                         <button>Buscar</button>
                                     </div>
@@ -268,6 +270,5 @@
         </div>
 
     </div>
-
 
 </section>
