--- a/paginas/home.phtml
+++ b/paginas/home.phtml
@@ -36,7 +36,7 @@
         <div class="categoria">
             <h2 >MAIS VENDIDOS</h2>
 
-            <a href="" >
+            <a href="maisvendidos" >
                 <p>Ver Todos</p>
             </a>
 
