--- a/paginas/erro.phtml
+++ b/paginas/erro.phtml
@@ -1,2 +1,1 @@
-<h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa eius delectus veniam quaerat ipsa consectetur itaque explicabo, hic odio impedit eligendi accusantium perferendis illum quisquam totam vero porro dolore mollitia?
-</h2>
+<img src="imagens/erro.webp" width="100%">
