tela de cartao completo

--- a/paginas/detalheProduto.phtml
+++ b/paginas/detalheProduto.phtml
@@ -28,12 +28,12 @@
                     <p class="subPreco">Aviste no Pix ou até <span>10x de R$7.800,00</span> sem juros</p>
                 </div>
 
-                <div class="compra_botao">
+                <form action="pagamento" class="compra_botao">
                     <button class="comprar_cart"><i class="bi bi-cart-plus"></i> COMPRAR</button>
                     <button class="carrinho"><i class="bi bi-cart-plus"></i></button>
-                </div>
+                </form>
             </div>
-
+            
             <hr>
 
             <div class="cep">
