--- a/paginas/pagamento.phtml
+++ b/paginas/pagamento.phtml
@@ -1,3 +1,6 @@
 <section id="main_pagamento">
-    
+    <div class="conteiner_pagamento">
+        <p class="text-center">Escolha sua forma de pagamento</p>
+      
+    </div>
 </section>
