--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,14 @@ header {
                     font-size: 16px;
                     font-weight: bold;
                     text-decoration: none;
+                    transition: 200ms;
+
+                    &:hover {
+                        text-shadow: 0 0 10px white !important;
+                        transform: scale(1.03, 1.03) !important;
+                    }
                 }
+
             }
         }
     }
@@ -650,6 +657,100 @@ footer {
             }
         }
 
+    }
+}
+
+#area_cartao {
+    width: 100%;
+    margin: 20px 0;
+
+    .conteiner_cartao {
+        width: 95%;
+
+        background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+        border: solid 2px white;
+        border-radius: 20px;
+        text-align: center;
+
+        padding: 26px 20px;
+        margin: auto;
+        margin-bottom: 20px;
+
+        h2 {
+            font-size: 16px;
+            font-weight: bold;
+
+            text-align: center;
+            margin-bottom: 26px;
+
+        }
+
+        .form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            input {
+                width: 100%;
+                height: 42px;
+
+                background-color: rgb(217, 217, 217, 0.1);
+                border-radius: 20px;
+                border: solid 1px white;
+                color: white;
+
+                margin-bottom: 20px;
+                padding: 0 10px;
+            }
+
+            input::placeholder {
+                color: rgba(255, 255, 255, 0.836);
+            }
+
+            input:focus {
+                outline: none;
+                /* Remove o contorno padrão */
+            }
+
+            .validacao {
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+                input {
+                    width: 100%;
+                    height: 42px;
+                }
+            }
+
+            .btn_login {
+                display: flex;
+                justify-content: center;
+
+                gap: 20px;
+                margin: 30px 0 30px 0;
+
+                #link {
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    width: 110px;
+                    height: 40px;
+
+                    color: rgb(0, 0, 0);
+                    text-decoration: none;
+                    font-weight: bold;
+                    font-size: 18px;
+                    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.425);
+
+                    background-color: white;
+                    border-radius: 20px;
+                    border: none;
+
+                }
+            }
+        }
     }
 }
 
@@ -914,6 +1015,7 @@ footer {
                 border-radius: 20px;
                 counter-increment: carousel-cell;
                 box-shadow: 0 2px 10px rgba(255, 255, 255, 0.404);
+
                 a {
                     text-decoration: none !important;
 
@@ -1437,6 +1539,34 @@ footer {
     }
 
 }
+
+#main_pagamento {
+    width: 100%;
+    margin: 40px auto;
+    padding: 0 10px;
+
+    .conteiner_pagamento {
+        background-color: rgb(217, 217, 217, 0.2) !important;
+        padding: 26px 20px;
+        border: solid 1px white;
+        border-radius: 20px;
+
+        p {
+            font-size: 20px;
+            font-weight: bold;
+
+            margin-bottom: 30px;
+
+            form {
+                button {
+                    background-color: #000000 !important;
+                }
+            }
+        }
+
+    }
+}
+
 @media (min-width: 600px) {
     #conteiner_carrosel {
         .carousel {
@@ -1637,6 +1767,27 @@ footer {
 }
 
 @media (min-width: 640px) {
+    #area_cartao {
+        .conteiner_cartao {
+            width: 640px;
+
+            form {
+                width: 400px;
+                margin: auto; 
+                
+                .validacao {
+                    width: 100%;
+                    flex-direction: row !important;
+
+                    input {
+                        width: 190px !important;
+                    }
+                }
+
+            }
+        }
+    }
+
     #area_login {
         .conteiner_login {
             width: 640px;
