--- a/paginas/pagamento.phtml
+++ b/paginas/pagamento.phtml
@@ -1,6 +1,45 @@
-<section id="main_pagamento">
+<section id="main_pagamento">4
+
     <div class="conteiner_pagamento">
         <p class="text-center">Escolha sua forma de pagamento</p>
-      
+        <form action="catao">
+            <div class="modelo">
+                <div class="parcela" for="creditocard">
+
+                    <label for="creditocard"><i class="bi bi-credit-card-2-back-fill"></i>PIX</label>
+
+                    <p>Pagamento Imediato</p>
+
+                </div>
+                <div class="ipt">
+                    <input type="checkbox" id="creditocard" name="pagamento" value="creditocard" require>
+                </div>
+            </div>
+            <div class="modelo">
+                <div class="parcela" for="creditocard">
+
+                    <label for="creditocard"><i class="bi bi-credit-card-2-back-fill"></i>Boleto</label>
+
+                    <p>O Pagamento Pode levar de 1 a 2 dias</p>
+
+                </div>
+                <div class="ipt">
+                    <input type="checkbox" id="creditocard" name="pagamento" value="creditocard" require>
+                </div>
+            </div>
+            <div class="modelo">
+                <div class="parcela" for="creditocard">
+
+                    <label for="creditocard"><i class="bi bi-credit-card-2-back-fill"></i>Cartão de Crédito</label>
+
+                    <p>Pagamento Imediato</p>
+
+                </div>
+                <div class="ipt">
+                    <input type="checkbox" id="creditocard" name="pagamento" value="creditocard" require>
+                </div>
+            </div>
+        </form>
     </div>
+    
 </section>
