--- a/css/style.css
+++ b/css/style.css
@@ -716,6 +716,7 @@ footer {
                 display: flex;
                 justify-content: space-between;
                 flex-direction: column;
+
                 input {
                     width: 100%;
                     height: 42px;
@@ -1465,21 +1466,22 @@ footer {
 
         }
 
-        .tributo {
-            display: flex;
-            align-items: center !important;
 
-            p {
-                font-size: 16px;
-                margin-bottom: 5px !important;
-                margin-right: 20px;
 
+
+        ul {
+            list-style: none !important;
+            padding-left: 0 !important;
+
+            li {
+                p {
+                    font-size: 16px;
+                    margin-bottom: 5px !important;
+                    margin-right: 20px;
+                }
             }
         }
-
     }
-
-
 }
 
 #main_admin {
@@ -1535,9 +1537,7 @@ footer {
                 color: white;
             }
         }
-
     }
-
 }
 
 #main_pagamento {
@@ -1546,8 +1546,8 @@ footer {
     padding: 0 10px;
 
     .conteiner_pagamento {
-        background-color: rgb(217, 217, 217, 0.2) !important;
-        padding: 26px 20px;
+        background-color: rgb(217, 217, 217, 0.1) !important;
+        padding: 16px 10px;
         border: solid 1px white;
         border-radius: 20px;
 
@@ -1557,15 +1557,131 @@ footer {
 
             margin-bottom: 30px;
 
-            form {
-                button {
-                    background-color: #000000 !important;
+        }
+
+        form {
+            .modelo {
+
+                height: 100px !important;
+                display: flex;
+                justify-content: space-between;
+
+
+                background-color: rgb(217, 217, 217, 0.2) !important;
+                border: solid 1px white;
+                border-radius: 20px;
+
+                padding: 10px;
+                padding-right: 20px;
+                margin-bottom: 20px;
+
+                .parcela {
+                    label {
+                        i {
+                            color: white;
+                            font-size: 20px;
+                            margin-right: 10px;
+
+                        }
+
+                        font-size: 18px;
+                        font-weight: bold;
+                    }
+
+                    p {
+                        font-size: 14px;
+                        font-weight: bold;
+                        margin-bottom: 10px;
+                    }
+
+                    a {
+                        font-size: 16px;
+                        font-weight: bold;
+                    }
+
+                    .dropdown-menu {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 15px;
+                        background-color: rgba(0, 0, 0, 0.4) !important;
+                        border: solid 1px white !important;
+                        border-radius: 20px;
+                        backdrop-filter: blur(5px) !important;
+                        padding: 10px 10px;
+
+                        li {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+
+                            label {
+                                color: white;
+                                margin-right: 10px;
+                            }
+
+                            input {
+                                width: 20px;
+                                height: 20px;
+                                transform: scale(1.1);
+                            }
+                        }
+
+                    }
+                }
+            }
+
+            .ipt {
+                display: flex;
+                align-items: center;
+
+                input {
+                    width: 20px;
+                    height: 20px;
+                    transform: scale(1.5);
                 }
             }
         }
 
+        .btn {
+            display: flex;
+            justify-content: end !important;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+
+            a {
+                display: flex;
+                align-items: center;
+                height: 40px;
+                background-color: white;
+                border-radius: 50px;
+                text-decoration: none;
+
+
+                font-size: 20px;
+                font-weight: bold;
+                color: black;
+                padding: 0 15px;
+
+            }
+
+            button {
+
+                height: 40px;
+                background-color: white;
+                border-radius: 50px;
+                border: none;
+
+                font-size: 20px;
+                font-weight: bold;
+                color: black;
+
+                padding: 0 15px;
+            }
+        }
     }
 }
+
 
 @media (min-width: 600px) {
     #conteiner_carrosel {
@@ -1764,6 +1880,22 @@ footer {
 
         }
     }
+
+    #main_pagamento {
+        .conteiner_pagamento {
+            width: 600px;
+            margin: 30px auto;
+
+            padding: 26px 20px;
+
+            form {
+                .credito {
+                    margin-bottom: 30px;
+                    height: 120px !important;
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 640px) {
@@ -1772,18 +1904,17 @@ footer {
             width: 640px;
 
             form {
-                width: 400px;
-                margin: auto; 
-                
+                width: 420px;
+                margin: auto;
+
                 .validacao {
                     width: 100%;
                     flex-direction: row !important;
 
                     input {
-                        width: 190px !important;
+                        width: 200px !important;
                     }
                 }
-
             }
         }
     }
@@ -1803,9 +1934,6 @@ footer {
             width: 640px;
         }
     }
-
-
-
 }
 
 @media (min-width: 830px) {
